Add javadoc generation to maven build Add LFS regex